[package]
name = "marmoset"
version = "0.9.0"
authors = ["Steve Sprang <scs@stevesprang.com>"]
license = "GPL-3.0+"
description = "Implementation of the card game SET"
repository = "https://github.com/sprang/marmoset"
readme = "README.md"
keywords = ["game", "card", "set"]
categories = ["games"]

[lib]
path = "src/core/lib.rs"
name = "core"

[[bin]]
path = "src/main.rs"
name = "marmoset"

[[example]]
path = "examples/count.rs"
name = "count"

[[example]]
path = "examples/simulate.rs"
name = "simulate"

[[example]]
path = "examples/genpng.rs"
name = "genpng"

[dependencies]
clap = "2.24.2"
gdk = "0.5.3"
gdk-pixbuf = "0.1.3"
gio = "0.1.3"
num-traits = "0.1"
num_cpus = "1.5"
prettytable-rs = "0.6"
rand = "0.3"
serde = "1.0.8"
serde_derive = "1.0.8"
serde_yaml = "0.7"
time = "0.1"

[dependencies.gtk]
version = "0.1.3"
features = ["v3_10"]

[dependencies.cairo-rs]
version = "0.1.3"
features = ["png"]
