[package]
name = "marmoset"
version = "0.9.4"
authors = ["Steve Sprang <scs@stevesprang.com>"]
license = "GPL-3.0+"
description = "Implementation of the card game SET"
repository = "https://github.com/sprang/marmoset"
readme = "README.md"
keywords = ["game", "card", "set"]
categories = ["games"]
edition = "2018"

[lib]
path = "src/core/lib.rs"
name = "core"

[[bin]]
path = "src/main.rs"
name = "marmoset"

[[example]]
path = "examples/count.rs"
name = "count"

[[example]]
path = "examples/simulate.rs"
name = "simulate"

[[example]]
path = "examples/genpng.rs"
name = "genpng"

[dependencies]
clap = "2.33.0"
gdk = "0.12.0"
gdk-pixbuf = "0.8.0"
glib = "0.9.1"
num-traits = "0.2"
num_cpus = "1.12"
prettytable-rs = "0.8"
rand = "0.7"
rayon = "1.3"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
time = "0.1"

[dependencies.gtk]
version = "0.8.0"
features = ["v3_18"]

[dependencies.gio]
version = "0.8.0"
features = ["v2_44"]

[dependencies.cairo-rs]
version = "0.8.0"
features = ["png"]
