[package]
name = "marmoset"
version = "0.9.4"
authors = ["Steve Sprang <scs@stevesprang.com>"]
license = "GPL-3.0+"
description = "Implementation of the card game SET"
repository = "https://github.com/sprang/marmoset"
readme = "README.md"
keywords = ["game", "card", "set"]
categories = ["games"]
edition = "2018"

[lib]
path = "src/core/lib.rs"
name = "core"

[[bin]]
path = "src/main.rs"
name = "marmoset"

[[example]]
path = "examples/count.rs"
name = "count"

[[example]]
path = "examples/simulate.rs"
name = "simulate"

[[example]]
path = "examples/genpng.rs"
name = "genpng"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
gdk = "0.17"
gdk-pixbuf = "0.17"
glib = "0.17"
num-traits = "0.2"
num_cpus = "1.16"
prettytable-rs = "0.10"
rand = "0.8"
rayon = "1.10"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.9"

[dependencies.gtk]
version = "0.17"

[dependencies.gio]
version = "0.17"

[dependencies.cairo-rs]
version = "0.17"
features = ["png"]
